<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">真心话大冒险(终极版)</string>
    <string name="action_settings">Settings</string>
        <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    
    <string name="word">真心话</string>
    <string name="risk">大冒险</string>
    <string name="rank">口味级别:</string>
    <string name="voice">是否开启声音</string>
    
    <string-array name="level">
        <item >小清新</item>
        <item >重口味</item>
        <item >无节操</item>
    </string-array>
        <string name="nav">当前设置:</string>
        <string name="set">设置</string>
        <string name="grade">当前积分:</string>

</resources>
