
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/wrap"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@drawable/main1_11">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main1_01"
                android:orientation="vertical"
                android:scaleType="fitXY" >

                <TextView
                    android:id="@+id/tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/nav"
                    android:textColor="#000000"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/grade"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sencond"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main1_02"
                android:gravity="top|right"
                android:orientation="horizontal" >
                
                <LinearLayout
                android:id="@+id/inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/set"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main1_04"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_weight="2.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/maincontent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="test"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:textColor="#000000"                
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_weight="2.5"
                    android:layout_width="0dp"                    
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/pre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/left" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main1_07"
                android:orientation="horizontal"
                android:scaleType="fitXY" >
            </LinearLayout>
            
           
        </LinearLayout>
    </ScrollView>
